--- a/src/containers/FooderType/FooderType.module.css
+++ b/src/containers/FooderType/FooderType.module.css
@@ -1,3 +1,62 @@
-.TypeSelector{
-    border:1px solid black;
+
+.cardTypeItem{
+    margin: 26px auto 10px auto;
+    min-width: 150px;
+    max-width:250px;
+    padding:16px 14px;
+    height:350px;
+    border-radius: 10%;
+    display: inline-block;
+    border:0;
+    box-shadow: 3px 3px 3px 3px #ccc;
+}
+
+.cardTypeItem h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding:20px 20px 5px 20px;
+    font-size:20px;
+}
+
+.cardTypeItem p {
+    font-size: 12px;
+    padding: 0 20px;
+    color:gray;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cardTypeItem .cardTypePriceTag{
+    display: inline;
+    font-size:28px;
+    float:left;
+    font-weight: 700;
+}
+
+.cardTypeImage{
+    width:100%;
+    height:50%;
+    border-radius: 10%;
+    object-fit: cover;
+    box-shadow: 0 5px 15px #777;
+}
+
+.cardTypeGrid{
+    margin-left:auto;
+    margin-right:auto;
+    width:50%;
+    margin-top: 20px;
+}
+
+.sortGridType{
+    width:20%;
+}
+
+
+/* Desktop ----------- */
+@media only screen 
+and (min-width : 900px) {
+    .cardTypeGrid{
+        display:flex;
+    }
 }
